system/staging/tempo/ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: tempo
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt
        nginx.ingress.kubernetes.io/proxy-buffer-size: 1m
        nginx.ingress.kubernetes.io/auth-url: ENC[AES256_GCM,data:RwEFeh37QzdgKC+fHfxb7ZgDhxEscWCwpCR93ThHadZTiTjEFdAPTw==,iv:GEEgPIgE6ja9W2BIHN5aZVt9clZBKn31ZJar+fwXiNs=,tag:UNyrqEYZ5HoOCM1NSWpPSg==,type:str]
        nginx.ingress.kubernetes.io/auth-signin: ENC[AES256_GCM,data:UJ3VcqeDff6VeJ3MQODSave8WjuVxtoHoLXvuKU9oTPsTbDUsJJgi68mfqd/0ThUCwKEFj5nJKZzGVCV3pZ8xocuMH4fZqn6,iv:nFDz6OPxiS+K1oaNueGRS6DBX8cHpRwrwv8imFywdq8=,tag:cQZ/+BHj539qAEALO3Ct7A==,type:str]
        nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User, X-Auth-Request-Email, X-Auth-Request-Groups, X-Auth-Request-Preferred-Username
        nginx.ingress.kubernetes.io/configuration-snippet: |
            auth_request_set $access_token $upstream_http_x_auth_request_access_token;
            proxy_set_header 'Authorization' 'Bearer $access_token';
            auth_request_set $id_token $upstream_http_authorization;
            proxy_set_header 'X-Forwarded-ID-Token' $id_token;
spec:
    ingressClassName: nginx
    rules:
        - host: ENC[AES256_GCM,data:/q2pEPBWXuSHMlYXAad1cQEtk27a,iv:ZO9EypfBVn3QezAH4AsRzraNpxOyAxPXng+A9MR8pRY=,tag:nKhP2fbo4zglsDHA1FC4YQ==,type:str]
          http:
            paths:
                - backend:
                    service:
                        name: tempo
                        port:
                            number: 16686
                  path: /
                  pathType: ImplementationSpecific
    tls:
        - hosts:
            - ENC[AES256_GCM,data:fz9Kjuav4CWsHUZ7AXIQZGhOcr1l,iv:riiw0LJMLt2Pd70ehZnTYK7rEWXQu5Wsc3kKg9HkfbY=,tag:o8bvS+ZMQ5KLgFDqshpe5A==,type:str]
          secretName: tempo-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-07-13T02:29:03Z"
    mac: ENC[AES256_GCM,data:RW/SO6T7Ig3sLMdsFvgPYaku7suRV7X9vpa3c92LxbQBKqnGqAajY2C4L41g/qP4TXCGznrPqJNWzyrf1ALfzftP2j+pWrspc72E/80kkGpVO9kzcsbnk+NzeDHKLiu/6+3eTwdfnM3QD+wIyofjTjAFXNPNhtvKdn9wA92PejQ=,iv:F7SlNp8zbOwILHkWiJ1oRIa8+12mDaXxQB46yAYCtyk=,tag:ifJnfJuxlsPNXFpzxfestw==,type:str]
    pgp:
        - created_at: "2023-07-13T02:29:01Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA38T7Az157GMARAAphTWCSBzgx+C33DRN3qNXMoq7S8r1exX+yiUWg2aLgVj
[...]
            =Wl8t
            -----END PGP MESSAGE-----
          fp: 129994A38E40322EE2A4FA6CB59C51DA13B1BF22
    encrypted_regex: ^(host|hosts|nginx\.ingress\.kubernetes\.io\/auth-url|nginx\.ingress\.kubernetes\.io\/auth-signin|storage_account_name|storage_account_key|container_name)$
    version: 3.7.3
